master: Fixed css file with z index at 1 for visibility

--- a/web_static/styles/6-filter.css
+++ b/web_static/styles/6-filter.css
@@ -35,6 +35,7 @@ button:hover {
 .locations:hover .popover {
     display: block;
     visibility: visible;
+    z-index: 1;
 }
 
 .amenities {
@@ -47,6 +48,7 @@ button:hover {
 .amenities:hover .popover {
     display: block;
     visibility: visible;
+    z-index: 1;
 }
 
 .locations h3,
